Добавлен туториал по установке через релиз